Fixed number of items next to tabs title in firefox

--- a/app/assets/stylesheets/sections/_users.scss
+++ b/app/assets/stylesheets/sections/_users.scss
@@ -29,7 +29,7 @@
     &:hover, &.active {
       @extend .darken-2;
     }
-    &.active .badge {
+    &.active .badge2 {
       @extend .light-green-text;
     }
   }
