Replaced source-code placeholder links with real links to github

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -27,9 +27,9 @@
         %h5 Le projet
         %ul
           %li
-            %a.grey-text{:href => "#!"} Code source
+            %a.grey-text{:href => "https://github.com/loganbraga/hobbes"} Code source
           %li
-            %a.grey-text{:href => "#!"} Code source (site)
+            %a.grey-text{:href => "https://github.com/loganbraga/hobbes-site"} Code source (site)
           %li
             %a.grey-text{:href => page_path('contribute')} Contribuer
       .col.l3.m3.s12
