--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -16,7 +16,7 @@
         %a{href: page_path('guides'), class: :'waves-effect waves-light btn btn-flat btn-large white-text brown btn-background-brown'}
           GUIDES
       .col.s6.offset-s2.center
-        %a{href: "#!", class: :'grey-text darken-3 uppercase small-caps link'}
+        %a{href: "https://github.com/loganbraga/hobbes", class: :'grey-text darken-3 uppercase small-caps link'}
           %i.mdi-action-label-outline
           Code source
 
