--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -128,6 +128,11 @@ a.submit {
 .photo-bloc {
   margin-top: 40px;
 
+  img {
+    width: 200px;
+    height: 200px;
+  }
+
   h4 {
     font-weight: bold;
   }
