Google analytics inclusion

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,7 @@
 
   %body{:class => yield(:background)}
     -# = render 'shared/preloader'
+    = render 'shared/analytics'
     = render 'shared/navbar'
     = render 'shared/flash'
 
