--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html{:lang => :fr}
   %head
     - base_title = 'Hobbes · Application de prise de cours pour les étudiants'
     - separator = ' | '
@@ -9,10 +9,14 @@
     - base_desc = 'Hobbes, application de prise de cours pour les étudiants. Écrivez vos cours dans notre langage adapté et compilez-les en site local autonome pour les révisions.'
     - desc = yield(:desc) != '' ? yield(:desc).capitalize + '. ' + base_desc : base_desc
     - keywords = %w(Hobbes cours notes étudiants compilateur site local templates révisions langage).join(", ")
+    %meta{:charset => "utf-8"}
     %meta{name: :description, :content => desc}
     %meta{name: :author, :content => 'Logan Braga Maxime Guillermet Marie Nuel'}
     %meta{name: :keywords, :content => keywords}
     %meta{name: :viewport, :content => "width=device-width, initial-scale=1"}
+
+    %link{:rel => 'author', :href => 'https://plus.google.com/+LoganBragaFrance/'}
+    %link{:rel => 'publisher', :href => 'https://plus.google.com/+LoganBragaFrance/'}
 
     %link{:href => 'http://fonts.googleapis.com/css?family=Open+Sans:800,700,400,300', rel: :stylesheet, type: :'text/css'}
     = stylesheet_link_tag 'application', media: 'all'
