From section to div to avoid semantically incorrect block

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -6,7 +6,7 @@
   #code_image
     = image_tag "editeur.png", class: :'responsive-img z-depth-2'
 
-%section#actions
+#actions
   .container
     .row
       .col.s12.center
