--- a/app/views/pages/infos.html.haml
+++ b/app/views/pages/infos.html.haml
@@ -22,7 +22,7 @@
         %br
         = link_to 'Téléchargements', page_path('download'), :class => 'center waves-effect waves-light btn btn-flat btn-large white-text light-green darken-1 btn-background-green'
         &nbsp;
-        = link_to 'Démarrage rapide', page_path('guides'), :class => 'waves-effect waves-light btn btn-flat btn-large white-text btn-background-brown'
+        = link_to 'Guides', page_path('guides'), :class => 'waves-effect waves-light btn btn-flat btn-large white-text btn-background-brown'
       .row
         .col.s12.m10.offset-m1
           %hr
