Cleaning up and "Guides" link in navbar

--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -13,6 +13,7 @@
         %ul#nav-mobile.right.side-nav
           = nav_link "hobbes", root_path
           = nav_link "infos", page_path('infos')
+          = nav_link "guides", page_path('guides')
           = nav_link "téléchargement", page_path('download')
           %li
             %a{href: :'#!', :class => "dropdown-button", :'data-activates' => "main_drop"}<
