--- a/app/views/pages/download.html.haml
+++ b/app/views/pages/download.html.haml
@@ -39,7 +39,7 @@
       .col.s12.m10.offset-m1.center
         %p.grey-text.darken-1
           Besoin d'aide pour faire vos premiers pas avec Hobbes ?
-        = link_to 'Démarrage rapide', page_path('guides'), :class => 'waves-effect waves-light btn btn-flat btn-large white-text btn-background-brown'
+        = link_to 'Démarrage rapide', page_path('guides/quickstart'), :class => 'waves-effect waves-light btn btn-flat btn-large white-text btn-background-brown'
 
 #gui-modal.modal.white
   .modal-content.profil
@@ -48,13 +48,13 @@
     %p.center
       S&eacute;lectionnez votre syst&egrave;me d'exploitation pour l'ex&eacute;cutable.
     %p.center
-      %a.waves-effect.waves-light.btn.btn-large.white-text.blue.darken-1{:href => "downloads/gui/hobbes-#{hobbes_version}.exe"}
+      %a.waves-effect.waves-light.btn.btn-flat.btn-large.white-text.blue.darken-1{:href => "downloads/gui/hobbes-#{hobbes_version}.exe"}
         Windows
       &nbsp;
-      %a.waves-effect.waves-light.btn.btn-large.white-text.yellow.darken-2{:href => "downloads/gui/hobbes-#{hobbes_version}"}
+      %a.waves-effect.waves-light.btn.btn-flat.btn-large.white-text.yellow.darken-2{:href => "downloads/gui/hobbes-#{hobbes_version}"}
         Mac OSX
       &nbsp;
-      %a.waves-effect.waves-light.btn.btn-large.white-text.grey.darken-1{:href => "downloads/gui/hobbes-#{hobbes_version}"}
+      %a.waves-effect.waves-light.btn.btn-flat.btn-large.white-text.grey.darken-1{:href => "downloads/gui/hobbes-#{hobbes_version}"}
         GNU/Linux
     %p
       Ou t&eacute;l&eacute;chargez directement le 
@@ -68,13 +68,13 @@
     %p.center
       S&eacute;lectionnez votre syst&egrave;me d'exploitation pour l'ex&eacute;cutable, &agrave; lancer depuis un terminal ou une invite de commande.
     %p.center
-      %a.waves-effect.waves-light.btn.btn-large.white-text.blue.darken-1{:href => "downloads/cli/hobbes-#{hobbes_version}.exe"}
+      %a.waves-effect.waves-light.btn.btn-flat.btn-large.white-text.blue.darken-1{:href => "downloads/cli/hobbes-#{hobbes_version}.exe"}
         Windows
       &nbsp;
-      %a.waves-effect.waves-light.btn.btn-large.white-text.yellow.darken-2{:href => "downloads/cli/hobbes-#{hobbes_version}"}
+      %a.waves-effect.waves-light.btn.btn-flat.btn-large.white-text.yellow.darken-2{:href => "downloads/cli/hobbes-#{hobbes_version}"}
         Mac OSX
       &nbsp;
-      %a.waves-effect.waves-light.btn.btn-large.white-text.grey.darken-1{:href => "downloads/cli/hobbes-#{hobbes_version}"}
+      %a.waves-effect.waves-light.btn.btn-flat.btn-large.white-text.grey.darken-1{:href => "downloads/cli/hobbes-#{hobbes_version}"}
         GNU/Linux
     %p
       Ou t&eacute;l&eacute;chargez directement le 
