Maxime new photo

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -31,7 +31,7 @@
           %p{:itemprop => :description}
             D&eacute;veloppement logiciel et site, maintenance
         .col.l4.s12.photo-bloc{:itemscope => true, :itemtype => "http://schema.org/Person"}
-          = image_tag 'maxime_guillermet.jpg', :class => 'responsive-img circle', :itemprop => :image
+          = image_tag 'max.jpg', :class => 'responsive-img circle', :itemprop => :image
           %h5.light-green-text.darken-1.lowercase.small-caps{:itemprop => :name}
             %span{:itemprop => :givenName}Maxime
             %span{:itemprop => :familyName}Guillermet
