Pages links update

--- a/app/views/pages/community.html.haml
+++ b/app/views/pages/community.html.haml
@@ -22,10 +22,10 @@
               %b Vos templates :
               partagez vos mod&egrave;les HTML pour la g&eacute;n&eacute;ration des cours
             %li
-              %b Vos fichiers d'abbr&eacute;viations
+              %b Vos fichiers d'abbr&eacute;viations :
               partagez vos fichiers .properties d'abbr&eacute;viations g&eacute;n&eacute;rales ou sp&eacute;cifiques &agrave; des mati&egrave;res particuli&egrave;res
             %li
-              %b Vos variables dynamiques
+              %b Vos variables dynamiques :
               partagez vos scripts Clojure de variables dynamiques .edn
         %br
       .row
