--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -40,7 +40,7 @@
           templates et ajouter vos fonctionnalit&eacute;s.
         .links
           %a{href: page_path('infos')} + d'infos
-          %a{href: page_path('guides')} d&eacute;marrage rapide
+          %a{href: page_path('guides/quickstart')} d&eacute;marrage rapide
       .col.m4.hide-on-small-only.text-right
         = image_tag "feuille.png", class: :'responsive-img'
 
@@ -81,7 +81,7 @@
       .col.m5.hide-on-small-only.text-right
         = image_tag "rocket_white.png", class: :'responsive-img rocket'
     .col.s12.center
-      %a{href: page_path('guides'), class: :'waves-effect waves-light btn btn-flat btn-large btn-border brown-hover'}
+      %a{href: page_path('download'), class: :'waves-effect waves-light btn btn-flat btn-large btn-border brown-hover'}
         j'essaye Hobbes
         %span.hide-on-small-only gratuitement
 
