--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -237,3 +237,43 @@ p > code, li > code {
   border: 1px solid #efefef;
   padding: 1px;
 }
+
+.uploader form {
+  width: 100%;
+}
+
+.card a {
+  text-transform: none;
+}
+
+.card-title {
+  font-weight: 500!important;
+  text-transform: lowercase;
+  font-variant: small-caps;
+}
+
+.card-action  {
+  overflow: hidden;
+
+  a {
+  color: white!important;
+
+    &:hover {
+      color: #efefef;
+    }
+  }
+}
+
+.card-image {
+  img {
+    max-height: 500px;
+    max-width: 500px;
+  }
+}
+
+.tmpl {
+  p {
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
