--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -128,7 +128,7 @@
       .clearfix
       .embed-container
         -# = image_tag "video_marron.png", class: :'responsive-img z-depth-1 video'
-        %iframe{:allowscriptaccess => "always", :allowFullScreen => "true", :frameborder => "0", :height => "315", :src => "http://www.youtube.com/embed/TlwIjUbMH2E?rel=0&amp;showinfo=0", :title => "YouTube video player", :width => "515"}
+        %iframe{:allowscriptaccess => "always", :allowFullScreen => "true", :frameborder => "0", :height => "315", :src => "https://www.youtube.com/embed/TlwIjUbMH2E?rel=0&amp;showinfo=0", :title => "YouTube video player", :width => "515"}
       -# .col.m3.hide-on-small-only.content
       -#   %h6 Contenu
       -#   %ul
